--- a/MyLibrary/src/ui/JFBook2.form
+++ b/MyLibrary/src/ui/JFBook2.form
@@ -355,8 +355,11 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBoxStatus">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="initStatusDisplayModel()" type="code"/>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="2">
+                <StringItem index="0" value="Actif"/>
+                <StringItem index="1" value="Inactif"/>
+              </StringArray>
             </Property>
           </Properties>
         </Component>
