--- a/MyLibrary/src/PanelModifié/AccessUpdatePanel.form
+++ b/MyLibrary/src/PanelModifié/AccessUpdatePanel.form
@@ -41,7 +41,7 @@
                       <Component id="jButton2" min="-2" pref="196" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="139" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
