--- a/MyLibrary/src/ui/JFBook2.form
+++ b/MyLibrary/src/ui/JFBook2.form
@@ -3,6 +3,9 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+    </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[900, 630]"/>
     </Property>
@@ -103,7 +106,7 @@
                                   <Component id="jComboBoxAuthor2" min="-2" pref="203" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="53" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jButtonAddPicture" alignment="1" min="-2" pref="187" max="-2" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
@@ -686,10 +689,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="tfSearch" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jPanel9" alignment="0" pref="176" max="32767" attributes="0"/>
+                          <Component id="jPanel9" alignment="0" pref="166" max="32767" attributes="0"/>
                           <Component id="jComboBoxSearch" alignment="0" pref="176" max="32767" attributes="0"/>
                           <Component id="jSeparator1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jPanel3" alignment="0" pref="176" max="32767" attributes="0"/>
+                          <Component id="jPanel3" alignment="0" pref="166" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
